fix snow covering btns

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,7 @@
+.z-1 {
+    z-index: 1;
+}
+
 .wl-content {
     display: flex;
     margin-left: 200px;
